--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,15 @@
 .image-wrapper {
-	width: 45%%;
+	width: 45%;
 	display: inline-block;
 }
 
 img {
 	width: 100%;
 	display: block;
+}
+#Background {
+	fill:blue;
+}
+#Background:hover {
+	fill: green; 
 }
